# intel-xed-to-json

./: CMakeLists.txt
.github/workflows/: main.yml
src/: decode_xed.cpp
